CB-29482 - Freeipa /reboot endpoint does API calls to the cluster in rest context
This commit makes health checking parallel, to speed up cases when the instance is non-reachable.
For this it introduces a new ExecutorService in FreeIPA.